src/content/docs/versions/ts-sdk/0.4.x/inputs/rtp.mdx
---
title: RTP
slug: ts-sdk/0.4.x/ts-sdk/inputs/rtp
---

import { Aside, Badge } from '@astrojs/starlight/components';
import CollapsibleDetails from '@components/CollapsibleDetails.astro';

<Badge text="Node.js" variant="tip" size="large" />

<Badge text="Browser (Client)" variant="tip" size="large" />

<br />

<br />

An input type that allows streaming video and audio to the Smelter server over RTP. It supports both
streaming over UDP and TCP (smelter works as a TCP server).

## Usage

```tsx title=rtpInputExample.tsx
import Smelter from "@swmansion/smelter-node";

async function run() {
  const smelter = new Smelter();
  await smelter.init();
  await smelter.registerInput("example", {
      type: "rtp_stream",
      port: 8001,
      transportProtocol: "tcp_server",
      video: { decoder: "ffmpeg_h264" },
      audio: { decoder: "opus" }
  });
  // At this point you can connect to 8001 TCP port
  // and start sending RTP traffic
}
void run();
```

## Reference

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type RegisterRtpInput = {
    type: "rtp_stream";
    port: string | number;
    transportProtocol?: "udp" | "tcp_server";
    video?: VideoOptions;
    audio?: AudioOptions;
    required?: bool;
    offsetMs?: number;
    bufferSizeMs?: number;
    sideChannel?: SideChannel;
  }
  ```
</CollapsibleDetails>

Parameters for registering an RTP stream as an input.

<Aside>At least one of `video` and `audio` has to be defined.</Aside>

## Properties

### port

A port number or a port range in format `START:END`. If range is specified, a port from that
range will be returned from `Smelter.registerInput`.

* **Type**: `string | number`

***

### transportProtocol

Transport protocol.

* **Type**: `"udp" | "tcp_server"`
* **Supported values**:
  * `udp` - UDP protocol.
  * `tcp_server` - TCP protocol where Smelter is the server side of the connection.

***

### video

Parameters of a video included in the RTP stream.

* **Type**: [`VideoOptions`](#videooptions)

***

### audio

Parameters of an audio source included in the RTP stream.

* **Type**: [`AudioOptions`](#audiooptions)

***

### required

Determines if the input stream is essential for output frame production. If set to true and the stream is delayed, Smelter will postpone output frames until the stream is received.

* **Type**: `boolean`
* **Default value**: `false`

***

### offsetMs

Offset in milliseconds relative to the pipeline start (start request). If unspecified, the stream synchronizes based on the delivery time of the initial frames.

* **Type**: `number`

***

### bufferSizeMs

Size of the jitter buffer in milliseconds. Controls how long packets are held to absorb network jitter and reorder out-of-order packets. Higher values increase latency but improve resilience to packet loss and reordering.

* **Type**: `number`

***

### sideChannel

Enable [side channel](/ts-sdk/0.4.x/side-channel/overview) publishing for this input. The external
consumer reads decoded frames / audio from a Unix socket created under
`SMELTER_SIDE_CHANNEL_SOCKET_DIR`.

* **Type**: [`SideChannel`](#sidechannel)
* **Option availability**: <Badge text="Node.js" variant="tip" />

## VideoOptions

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type VideoOptions = {
    decoder: "ffmpeg_h264" | "vulkan_h264" | "ffmpeg_vp8" | "ffmpeg_vp9";
  }
  ```
</CollapsibleDetails>

Parameters of a video source included in the RTP stream.

### Properties

#### decoder

Video decoder.

* **Type**: `"ffmpeg_h264" | "vulkan_h264" | "ffmpeg_vp8" | "ffmpeg_vp9"`
* **Supported values**:
  * `"ffmpeg_h264"` - Use the software H264 decoder based on ffmpeg.
  * `"vulkan_h264"` (<Badge text="Required feature: gpu-video" variant="note" />) - Hardware decoder. Requires GPU that supports Vulkan Video decoding.
  * `"ffmpeg_vp8"` - Use the software VP8 decoder based on ffmpeg.
  * `"ffmpeg_vp9"` - Use the software VP9 decoder based on ffmpeg.

## AudioOptions

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type AudioOptions =
    | {
        decoder: "opus";
      }
    | {
        decoder: "aac";
        audioSpecificConfig: string;
        rtpMode?: "low_bitrate" | "high_bitrate";
      }
  ```
</CollapsibleDetails>

Parameters of an audio source included in the RTP stream.

### Properties (decoder: "opus")

### Properties (decoder: "aac")

#### audioSpecificConfig

Configuration encoded in the format described in <a href="https://datatracker.ietf.org/doc/html/rfc3640#section-4.1" target="_blank">RFC 3640</a>.

* **Type**: `string`

For detailed instructions on obtaining this value, refer to the information provided in the table below:

<table>
  <thead>
    <tr>
      <th>Format/Protocol</th>
      <th>Location of AAC Specific Config (ASC)</th>
      <th>Notes</th>
    </tr>
  </thead>

  <tbody>
    <tr>
      <td><strong>FFmpeg Streaming</strong></td>
      <td>SDP file</td>
      <td>Use the <code>-sdp\_file FILENAME</code> option when streaming to a smelter to generate an SDP file containing the ASC.</td>
    </tr>

    <tr>
      <td><strong>MP4 Files</strong></td>
      <td>Inside the <code>esds</code> box</td>
      <td>The ASC is embedded as part of the <code>esds</code> box, not the entire box. Applies to regular MP4 and fragmented MP4s (used in HLS playlists with MP4 files).</td>
    </tr>

    <tr>
      <td><strong>FLV Files / RTMP</strong></td>
      <td>Inside the <code>AACAUDIODATA</code> tag</td>
      <td>The ASC is contained within the <code>AACAUDIODATA</code> tag.</td>
    </tr>
  </tbody>
</table>

The following command prints the SDP file used for connection to stdout:

```
ffmpeg -v 0 -i <INPUT_FILE> -t 0 -vn -c:a copy \
  -sdp_file /dev/stdout -f rtp 'rtp://127.0.0.1:1111'
```

To find value for the `audioSpecificConfig` field search for the `config=<HEX_STRING>`. The `HEX_STRING` is the required config.

#### rtpMode

Specifies the RFC 3640 mode that should be used when depacketizing this stream. For more information, visit <a href="https://datatracker.ietf.org/doc/html/rfc3640#section-3.3.1" target="_blank">RFC specification</a>

* **Type**: `"low_bitrate" | "high_bitrate"`
* **Default value**: `"high_bitrate"`

## SideChannel

Per-track side channel configuration. See the [Side Channel overview](/ts-sdk/0.4.x/side-channel/overview) for details on how decoded data is exposed and consumed.

<CollapsibleDetails summaryTitle="Type definition" open>
  ```tsx
  type SideChannel = {
    video?: boolean;
    audio?: boolean;
    delayMs?: number;
  };
  ```
</CollapsibleDetails>

### Properties

#### video

Publish decoded RGBA video frames for this input on the side channel.

* **Type**: `boolean`
* **Default value**: `false`

#### audio

Publish decoded PCM audio batches for this input on the side channel.

* **Type**: `boolean`
* **Default value**: `false`

#### delayMs

Side channel delay in milliseconds. Frames are buffered for this duration ahead of when the queue consumes them, so the side-channel subscriber receives them early and has roughly this much time to process before the frame is due.

* **Type**: `number`
* **Default value**: `0`
